--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/a21e0c96cd.js"
+      crossorigin="anonymous"
+    ></script>
     <title>My Store</title>
   </head>
   <body>
